@@ -1,5 +1,8 @@
 Release CMTK-1.3.1:
 
+- Fixed: when using an unknown image file format suffix, CMTK would state that
+    it would write a RAW3D file instead, but then write nothing. This now
+    defaults to single-file NIFTI, which is actually written (Issue #4852).
 - Refactored: consolidated affine initialization of groupwise registration
     functionals to reduce code duplication and thus avoid residual unfixed
     bugs.
